# AuroraDB

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  main.cpp
src/storage/: BufferPoolManager.cpp  FullTableScan.cpp  PageManager.cpp
src/storage/include/: BufferPoolManager.h  FullTableScan.h  Page.h  PageManager.h  Registro.h
tests/: CMakeLists.txt
